# MeetingGenius

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Handoff.md  README.md  demo-https.sh  demo.sh  dev.sh  pyproject.toml  smoke_ws.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: mindmap-replay.spec.ts
apps/web/e2e/fixtures/: complex_transcript.txt
apps/web/src/: App.css  App.tsx  contracts.ts  index.css
apps/web/src/components/: Mindmap.tsx  TranscriptPanel.tsx  Whiteboard.tsx
apps/web/src/components/cards/: ChartCardView.tsx  ListCardView.tsx  (+1 more)
apps/web/src/hooks/: useBoardSocket.ts  useSpeechRecognition.ts
apps/web/src/telemetry/: sessionTelemetry.ts
docs/: Architecture.md  Backlog.md  CODEX_ORCH_PILOT.md  Data-Sources.md  Demo-Runbook.md  Initial Plan.txt  PRD.md  Privacy-Security.md  README.md  Rapid-Prototype-Plan.md  Risks.md  Success-Metrics.md  demo-board-export.json  meeting_native_artifacts_examples.md
docs/ADR/: 0001-pydanticai-and-typed-board-actions.md  README.md
scripts/: e2e-serve.sh
src/meetinggenius/: cli.py  contracts.py  server.py  sqlite_store.py  task_seeding.py
src/meetinggenius/agents/: __init__.py  board_planner.py  mindmap_extractor.py  orchestrator.py
src/meetinggenius/board/: __init__.py  reducer.py
src/meetinggenius/tools/: __init__.py  headlines_gdelt.py  registry.py  research.py  weather_open_meteo.py
